# libsmf

./: .gitignore  COPYING  Makefile.am  NEWS  README  autogen.sh  configure.ac  doxygen.cfg  smf.pc.in
man/: smfsh-ref.sgml  smfsh.1
src/: COPYING  Makefile.am  TODO  TUTORIAL  config.h  doxygen.cfg  smf-duplicate.c  smf.c  smf.h  smf.ver  smf_decode.c  smf_load.c  smf_log.c  smf_private.h  smf_save.c  smf_tempo.c  smf_vector.c  smf_warn.c  smfsh.c
